--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /credentials.json
 /package-lock.json
+/aws.xml
+/csv-editor.xml
+/jsLibraryMappings.xml
+/material_theme_project_new.xml
+/misc.xml
+/modules.xml
+/tirocinio_chiese.iml
+/vcs.xml
+/workspace.xml
